--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
     "nodemon": "^2.0.16",
+    "nprogress": "^0.2.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
